Fixed padding and z-index for the navbar

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.85);
-  z-index: 2000;
+  z-index: 1000;
 }
 
 .Nav ul {
